# multi_output_standard_cell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/epfl/: README.md  large.yaml  manifest.yaml  medium.yaml  small.yaml  tiny.yaml
docs/: ABC_MOCKTURTLE_MULTI_OUTPUT.md  ASAP7_MULTI_OUTPUT_CELLS.md  GENERATE_LIBCELL_INFO_V2_MULTI_OUTPUT.md  GRADMAP.md  GRADUATE.md  MOCKTURTLE.md  NF_EMAP_CANDIDATE_ORDER.md  SCRIPTS.md
output/: asap7_libcell_info_v2_multi_output.txt
scripts/: README.md  abc_emap_map.abc  abc_map_emap_y.abc  abc_syn_balance.abc  abc_syn_map_balance.abc  abc_syn_map_deepsyn.abc  abc_syn_map_resyn2.abc  cec_fair_nf_emap.sh  compare_graduate_abc_emap.sh  compare_nf_emap_map.sh  generate_libcell_info_v2_multi_output.py  list_epfl_benchmarks.sh  run_abc_emap_map.sh  run_abc_mockturtle_map.sh  run_abc_syn_map.sh  run_fair_nf_emap_compare.sh  test_command.sh
scripts/abc/: abc_emap_map.abc  abc_map_emap_y.abc  abc_map_nf_y.abc  abc_syn_balance.abc  abc_syn_map_balance.abc  abc_syn_map_deepsyn.abc
scripts/py/: merge_emap_twins.py  validate_emap_mog_root_overlap.py  validate_emap_mog_semantic_dedup.py  validate_emap_nf_y_multi.py  validate_emap_so_exact_dedup.py
scripts/sh/: cec_fair_nf_emap.sh  compare_nf_emap_map.sh  emap_so_policy_lib.sh  hard_replay_emap_mog.sh  list_epfl_benchmarks.sh  redump_emap_y_fair.sh  regression_emap_so_export.sh  run_abc_emap_map.sh  run_abc_syn_map.sh  run_emap_so_policy_compare.sh  run_fair_nf_emap_compare.sh
src/: mo_techmap.cpp
